# embodied-claude-additional-mcps

./: README-ja.md  README.md
hearing/: pyproject.toml
hearing/docs/design-notes/: field-notes.md  reference-comparison.md
hearing/src/hearing/: __init__.py  server.py
human-mcp/: README.md  pyproject.toml  watcher.py
human-mcp/src/human_mcp/: cli.py  server.py  transport.py  types.py
human-mcp/tests/: test_cli.py  test_server.py  test_transport.py  test_types.py
ip-webcam-mcp/src/ip_webcam_mcp/: server.py
