[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "human-mcp"
version = "0.1.0"
description = "MCP server that treats humans as callable resources - Human as MCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[project.scripts]
human-mcp = "human_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/human_mcp"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
